odin-cv-app/src/styles/Accordion.scss
$outer-radius: 10px;
$inner-radius: 5px;
$border-color: #333;
$header-background-color: #eee;
$content-background-color: white;
$padding: 20px;
$shadow: 0px 1px 1px rgba(51, 51, 51, 0.6);

.accordion {
  border: 1px solid #333;
  border-radius: $outer-radius;

  .accordion-header {
    background-color: $header-background-color;
    box-shadow: $shadow;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: $padding;
    width: 100%;
    border-radius: $outer-radius;
    border: none;
    cursor: pointer;
    transition: border-color 300ms ease-in-out;

    &:hover,
    &:focus {
      outline: none;
      .icon {
        border-color: $border-color;
      }
    }

    h2 {
      margin: 0;
      pointer-events: none;
    }
    .icon {
      pointer-events: none;
      padding: 10px;
      border: 1px solid transparent;
      border-radius: $inner-radius;
      transition: border-color 200ms ease-in-out;
      svg {
        pointer-events: none;
        transition: transform 200ms ease-in-out;
        font-size: 1.1rem;

        &.open {
          transform: rotate(180deg);
        }
      }
    }
  }

  .accordion-content {
    max-height: 0;
    box-sizing: border-box;
    opacity: 0;
    transform: translateY(-20px);
    transform-origin: top;
    transition: transform 150ms ease-in-out, opacity 150ms ease-in-out,
      max-height 150ms ease-in;

    &.open {
      transform: translateY(0);
      opacity: 1;
      max-height: 100vh;
    }
  }
}

